--- a/package.json
+++ b/package.json
@@ -40,14 +40,16 @@
         "./tsconfig.json"
       ]
     },
-    "overrides": [ {
-      "files": [
-        "**/*.stories.*"
-      ],
-      "rules": {
-        "import/no-anonymous-default-export": "off"
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
       }
-    } ]
+    ]
   },
   "browserslist": {
     "production": [
@@ -68,6 +70,7 @@
     "@storybook/node-logger": "^6.3.4",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.4",
+    "@types/styled-components": "^5.1.11",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "babel-loader": "8.1.0",
     "eslint": "^7.28.0",
