--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "lint": "yarn lint:eslint && yarn lint:prettier",
     "lint:eslint": "yarn run -s eslint './src/**/*.{ts,tsx}'",
     "lint:prettier": "yarn run -s prettier --check ./src",
@@ -87,6 +87,8 @@
     "@types/styled-components": "^5.1.11",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "babel-loader": "8.1.0",
+    "babel-plugin-direct-import": "^0.9.2",
+    "customize-cra": "^1.0.0",
     "eslint": "^7.28.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
@@ -102,6 +104,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "26.6.0",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "react-app-rewired": "^2.1.8"
   }
 }
