--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "@types/styled-components": "^5.1.11",
     "@typescript-eslint/eslint-plugin": "^4.27.0",
     "babel-loader": "8.1.0",
-    "babel-plugin-direct-import": "^0.9.2",
+    "babel-plugin-import": "^1.13.3",
     "customize-cra": "^1.0.0",
     "eslint": "^7.28.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
