--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/material": "^5.0.0",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
     "@mui/styled-engine-sc": "^5.0.0",
+    "@mui/system": "^5.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
