--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # development
-REACT_APP_DEVELOPMENT_DAINAGON_URL="https://dinagon.herokuapp.com"
+REACT_APP_DEVELOPMENT_DAINAGON_URL="http://localhost:8888"
 
 # production
 REACT_APP_PRODUCTION_DAINAGON_URL="https://dinagon.herokuapp.com"
