--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "ace-builds": "^1.4.12",
+    "acorn-loose": "^8.2.1",
     "axios": "^0.21.1",
+    "escodegen": "^2.0.0",
     "react": "^17.0.2",
     "react-ace": "^9.4.3",
     "react-dom": "^17.0.2",
