--- a/package.json
+++ b/package.json
@@ -102,6 +102,8 @@
     "eslint-plugin-progress": "^0.0.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "gh-pages": "^3.2.3",
     "jest": "26.6.0",
     "prettier": "^2.3.1",
